Having a bad time watchpoint firing during compilation revealed a racy assertion https://bugs.webkit.org/show_bug.cgi?id=180048 <rdar://problem/35700009>

Reviewed by Mark Lam.

While a DFG compilation is watching the having a bad time watchpoint, it was
asserting that the rest parameter structure has indexing type ArrayWithContiguous.
However, if the having a bad time watchpoint fires during the compilation,
this particular structure will no longer have ArrayWithContiguous indexing type.
This patch fixes this racy assertion to be aware that the watchpoint may fire
during compilation.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileCreateRest):
(JSC::DFG::SpeculativeJIT::compileNewArrayWithSpread):


Canonical link: https://commits.webkit.org/196049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225188 268f45cc-cd09-0410-ab3c-d52691b4dbfc